# poa

./: .gitignore  CMakeLists.txt  README.md  config.rules  m_po_mine.aln
Debug/: makefile
src/: Conpoa.cpp  Conpoa.h  FastaOutputFormater.cpp  FastaOutputFormater.h  Graph.cpp  Graph.h  GraphFactory.cpp  GraphFactory.h  HeaviestBundle.cpp  HeaviestBundle.h  InclusionRule.cpp  InclusionRule.h  InternalGapLength.cpp  InternalGapLength.h  Link.cpp  Link.h  Node.cpp  Node.h  OutputFormater.cpp  OutputFormater.h  PercentageMatchSeqRule.cpp  PercentageMatchSeqRule.h  PoGraphCreator.cpp  PoGraphCreator.h  PoMsa.cpp  PoMsa.h  RuleFactory.cpp  RuleFactory.h  Seq.cpp  Seq.h  SequenceBundler.cpp  SequenceBundler.h  ThreadPool.h  config.rules  poa_1.cpp
